{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 7,
  "lineage": "786a4e75-55af-6d9a-0506-bfb22e7d40fe",
  "resources": [
    {
      "module": "module.instanceModule",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testInstanceEip",
      "provider": "module.instanceModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fb25169555e9158b",
            "domain": "vpc",
            "id": "eipalloc-09e175ceff0fa6def",
            "instance": "i-074f453a61846bfbc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b1b38fc934a4b3ed",
            "private_dns": "ip-10-1-0-203.ec2.internal",
            "private_ip": "10.1.0.203",
            "public_dns": "ec2-54-83-245-253.compute-1.amazonaws.com",
            "public_ip": "54.83.245.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Testing"
            },
            "vpc": true
          },
          "dependencies": [
            "module.instanceModule.aws_instance.instance",
            "module.securityGroupModule.aws_security_group.sg_22"
          ]
        }
      ]
    },
    {
      "module": "module.instanceModule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "module.instanceModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091a054de67e2a46e",
            "arn": "arn:aws:ec2:us-east-1:246812814685:instance/i-074f453a61846bfbc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074f453a61846bfbc",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1b38fc934a4b3ed",
            "private_dns": "ip-10-1-0-203.ec2.internal",
            "private_ip": "10.1.0.203",
            "public_dns": "ec2-34-201-38-225.compute-1.amazonaws.com",
            "public_ip": "34.201.38.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05871881e3e6536dd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0093664b2bf6ee196",
            "tags": {
              "Environment": "Testing"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0555a2bba73b4c956"
            ]
          },
          "dependencies": [
            "module.securityGroupModule.aws_security_group.sg_22"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroupModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "module.securityGroupModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246812814685:security-group/sg-0555a2bba73b4c956",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0555a2bba73b4c956",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "246812814685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f2e55b2df9f15dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.securityGroupModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_80",
      "provider": "module.securityGroupModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246812814685:security-group/sg-09c6e4a90181e0615",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c6e4a90181e0615",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_80",
            "name_prefix": "",
            "owner_id": "246812814685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f2e55b2df9f15dc"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}